--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main-nav">
       <ul class="nav">
         <li class="name"><a href="#">Accessible Frog</a></li>
-        <li><a href="tour.html" alt="">Tour</a></li>
+        <li><a href="tour.html">Tour</a></li>
         <li><a href="survey.html">Survey</a></li>
       </ul>
     </div>
@@ -39,7 +39,7 @@
 
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/lead_singer.jpg" alt= An image of the lead singer singing in concert.>
+          <img class="photo" src= "img/lead_singer.jpg" alt= "An image of the lead singer singing in concert.">
           <div class="information">
             <h3>About the band</h3>
             <p>Photo booth aliquip pinterest meggings. Sapiente commodo wolf put a bird on it fingerstache gentrify, meh polaroid vegan everyday carry.</p>
